NOJIRA fixing alignment on page options for group/user pages

--- a/dev/css/sakai/sakai.show.css
+++ b/dev/css/sakai/sakai.show.css
@@ -1,6 +1,6 @@
 div#sitespages_page_options{width:180px;padding:10px;float:right;display:inline;}
 div#sitespages_page_options.joinable{display:none;}
-div#sitespages_page_options button{float:right;}
+div#sitespages_page_options button{float:left;}
 div#sitespages_page_options #page_options{float:right;}
 div#sitespages_page_options #page_save_options{float:right;margin-top:64px;}
 div#page_save_options_bottom,div#page_save_options_bottom button{float:right;}
